noinst_LIBRARIES = libmetvcommon.a

AM_CPPFLAGS = \
	$(ME_TV_COMMON_CFLAGS)

libmetvcommon_a_SOURCES = \
	atsc_text.cc \
	atsc_text.h \
	buffer.cc \
	buffer.h \
	channel.cc \
	channel.h \
	channel_manager.cc \
	channel_manager.h \
	channels_conf_line.cc \
	channels_conf_line.h \
	channel_stream.cc \
	channel_stream.h \
	client.cc \
	client.h \
	common.cc \
	common.h \
	crc32.cc \
	crc32.h \
	data.cc \
	data.h \
	device_manager.cc \
	device_manager.h \
	dvb_demuxer.cc \
	dvb_demuxer.h \
	dvb_frontend.cc \
	dvb_frontend.h \
	dvb_scanner.cc \
	dvb_scanner.h \
	dvb_service.cc \
	dvb_service.h \
	dvb_si.cc \
	dvb_si.h \
	dvb_transponder.cc \
	dvb_transponder.h \
	epg_event.cc \
	epg_event.h \
	epg_events.cc \
	epg_events.h \
	epg_thread.cc \
	epg_thread.h \
	exception.h \
	frontend_thread.cc \
	frontend_thread.h \
	i18n.h \
	me-tv-i18n.h \
	me-tv-types.h \
	mpeg_stream.cc \
	mpeg_stream.h \
	request_handler.cc \
	request_handler.h \
	scheduled_recording.cc \
	scheduled_recording.h \
	scheduled_recording_manager.cc \
	scheduled_recording_manager.h \
	stream_manager.cc \
	stream_manager.h \
	thread.cc \
	thread.h \
	network_server_thread.cc \
	network_server_thread.h \
	server.cc \
	server.h \
	rtsp_server_thread.cc \
	rtsp_server_thread.h

libmetvcommon_a_CXXFLAGS = \
	-I/usr/include/liveMedia \
	-I/usr/include/groupsock \
	-I/usr/include/BasicUsageEnvironment \
	-I/usr/include/UsageEnvironment

